--- a/public/converter.html
+++ b/public/converter.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>cenmask</title>
+    <title>Make my art uncen</title>
     <script src="js/vendor.js"></script>
     <style>
       body{
