--- a/public/converter.html
+++ b/public/converter.html
@@ -1,13 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Make my art uncen</title>
     <script src="js/vendor.js"></script>
     <style>
-      body{
-        margin:0;
-        padding:0;
+      * {
+        box-sizing: border-box;
+      }
+      html {
+        height: 100%;
+      }
+      body {
+        background-color: #ccc;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #root {
+        height: 100%;
+      }
+      .custom .react-colorful {
+        width: auto;
+        height: auto;
+      }
+      .react-colorful .react-colorful__saturation {
+        width: 160px;
+        height: 140px;
+        border-radius: 0;
+      }
+      .react-colorful .react-colorful__hue {
+        height: 20px;
+        width: 160px;
+        border-radius: 0;
       }
     </style>
   </head>
@@ -16,4 +41,3 @@
     <script src="js/converter.js"></script>
   </body>
 </html>
-
